--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/server.ts",
+            "src": "src/app.js",
             "use": "@vercel/node"
         }
     ],
     "routers": [
         {
             "src": "(.*)",
-            "dest": "src/server.ts"
+            "dest": "src/app.js"
         }
     ]
 }
