--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "name": "blog",
   "version": "1.0.0",
   "main": "app.js",
+  "engines": {
+    "node": "14.x"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
