--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "app.js",
+            "src": "./app.js",
             "use": "@now/node"
         }
     ],
     "routers": [
         {
             "src": "/(.*)",
-            "dest": "app.js"
+            "dest": "./app.js"
         }
     ]
 }
