--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "engines": {
     "node": "18.x"
   },
+  "type": "module",
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
