--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "js",
     "start": "node app.js"
   },
   "author": "",
