--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+
     "version": 2,
     "builds": [
       {
@@ -7,5 +10,3 @@
       }
     ]
   }
-
-  { "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
