--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "memorystore": "^1.6.7",
     "mongoose": "^8.1.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
