--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-session": "^2.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
